src/app/components/post/posts.component.scss
@use 'variables' as *;

.loading-spinner {
    max-width: fit-content;
    * {
        max-width: 80px;
    }
}

:host {
    display: block;
    width: 100%;
}

.posts {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding-block: 20px;

    .post {
        background-color: $color-bg-100;
        padding: 20px;
        border-radius: 10px;
        box-shadow: 0 4px 10px #00000010;
        margin-bottom: 20px;
        width: 100%;

        &:last-child {
            margin-bottom: 0;
        }

        .content, .author, .tags {
            font-size: 20px;
            line-height: normal;
            word-wrap: break-word;
            word-break: break-word;
            hyphens: auto;  
            @media screen and (max-width: calc($md - $eps)) {
                font-size: 20px;
                line-height: normal;
            }
        }

        .tag-title {
            margin-right: 10px;
            display: flex;
            align-items: center;
            @media screen and (max-width: calc($md - $eps)) {
                width: 100%;
                font-size: 20px;
                margin-bottom: 5px;
            }
        }

        .tags {
            color: #333;
            margin-bottom: 10px;
            display: flex;
            align-items: center;
            width: 100%;
            flex-wrap: wrap;
        }

        .tags-container {
            display: flex;
            justify-content: start;
            align-items: center;
        }

        .tag {
            font-weight: 500;
            background-color: $color-accent-bg-100;
            color: #FFF;
            text-transform: uppercase;
            padding: 5px 10px;
            border-radius: 4px;
            margin-right: 5px;
            cursor: pointer;
            transition: $default-transition;
            margin-bottom: 5px;

            &:hover {
                background-color: $color-accent-bg-200;
            }
        }

        .author {
            display: block;
            margin-top: 20px;
            color: #555;
        }
    }

    .header {
        display: flex;
        width: 100%;
        justify-content: space-between;
        align-items: center;

        .star-favourite {
            font-size: 24px;
            color: $star-inacive-color;
            filter: drop-shadow(0 0 4px rgba($color-accent-text, 20%));
            cursor: pointer;
            transition: $default-transition;

            &:hover {
                color: $star-active-color;
                filter: drop-shadow(0 0 4px $color-accent-text);
            }
        }
    }

    .comments-dropdown {
        font-size: 20px;
        @media screen and (max-width: calc($md - $eps)) {
            font-size: 18px;
        }
        margin-top: 5px;

        button {
            outline: none;
            background: none;
            border: none;
            padding: 0;
            margin: 0;
        }

        .comments-caret-icon {
            display: inline-block;
            transition: $default-transition;
        }

        &.active {
            .comments-caret-icon {
                rotate: 180deg;
            }
        }
    }
}

